<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TableRow>
            <TextView
                android:text="@string/productCategory"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle" />
            <TextView
                android:id="@+id/productCategory"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/productName"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/productName"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/companyName"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/companyName"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/companyOrigin"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/companyOrigin"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/companySince"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/companySince"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/companyOwner"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/companyOwner"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/userRating"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <RatingBar
                android:id="@+id/userRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:numStars="5"
                android:stepSize="1"
                android:paddingTop="6dp"
                android:layout_column="1"
                style="@style/rating_stars"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/submitUserRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="start"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:visibility="visible"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>