<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TableRow>
            <TextView
                android:text="@string/barCodeFormat"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle" />
            <TextView
                android:id="@+id/barCodeFormat"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/barDetails"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/barCodeResult"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/country"
                android:textStyle="bold"
                android:layout_column="0"
                style="@style/TextStyle"/>
            <TextView
                android:id="@+id/country"
                android:layout_column="1"
                style="@style/TextStyle"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>