<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout2"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/searchProductType"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/searchProduct_text"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/recordAndSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_alignTop="@+id/searchProductType"
                android:layout_alignBottom="@+id/searchProductType"
                android:layout_alignRight="@+id/searchProductType"
                android:layout_alignEnd="@+id/searchProductType"
                android:background="@android:color/transparent"
                android:contentDescription="@string/mic"
                android:src="@drawable/mic" />

            <Spinner
                android:id="@+id/productTypeDropDown"
                android:layout_alignParentTop="true"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/recordAndSearch"
                android:layout_toRightOf="@+id/recordAndSearch"
                android:textColor="@android:color/transparent"
                android:background="@drawable/spinner_style"
                android:spinnerMode="dropdown" />

            <ImageButton
                android:id="@+id/barCodeScanner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/bar"
                android:layout_toEndOf="@+id/productTypeDropDown"
                android:layout_toRightOf="@+id/productTypeDropDown"
                android:background="@mipmap/bar_qr_reader"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/productDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeLayout2"
            android:listSelector="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:focusable="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>